update project pics

--- a/index.html
+++ b/index.html
@@ -336,6 +336,25 @@
 			<div class="row">
 				<!-- Project 1 -->
 				<div class="col-md-4 text-center col-padding">
+					<div class="work project-box" style="background-image: url(images/oceanspace.png);">
+						<div class="desc">
+							<h3>OceanSpace</h3>
+							<a href="https://github.com/s6007541/OceanSpace" class="github-link">
+								<i class="fab fa-github"></i>
+							</a>
+							<p class="project-description">LLM-based Personalized Digital Sanctuary for Stress Relief</p>
+							<div class="keywords">
+								<span class="keyword-btn">LLM</span>
+								<span class="keyword-btn">Chatbot</span>
+								<span class="keyword-btn">Personalization</span>
+								<span class="keyword-btn">Mental Health</span>
+								<span class="keyword-btn">Full-Stack</span>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- Project 2 -->
+				<div class="col-md-4 text-center col-padding">
 					<div class="work project-box" style="background-image: url(images/AdaDQN.gif);">
 						<div class="desc">
 							<h3>AdaDQN</h3>
@@ -351,81 +370,7 @@
 						</div>
 					</div>
 				</div>
-				<!-- Project 2 -->
-				<div class="col-md-4 text-center col-padding">
-					<div class="work project-box" style="background-image: url(images/EvolveUniTest.png);">
-						<div class="desc">
-							<h3>EvolveUniTest</h3>
-							<a href="https://github.com/s6007541/EvolveUniTest" class="github-link">
-								<i class="fab fa-github"></i>
-							</a>
-							<p class="project-description">Evolving Prompt with Genetic Algorithm Yields Powerful Instruction for Unit Test Generation</p>
-							<div class="keywords">
-								<span class="keyword-btn">Unit Testing</span>
-								<span class="keyword-btn">Prompt Engineering</span>
-								<span class="keyword-btn">Evolutionary Algorithms</span>
-								<span class="keyword-btn">LLM</span>
-							</div>
-						</div>
-					</div>
-				</div>
 				<!-- Project 3 -->
-				<div class="col-md-4 text-center col-padding">
-					<div class="work project-box" style="background-image: url(images/PSKD_ML.png);">
-						<div class="desc">
-							<h3>PSKD-ML</h3>
-							<a href="https://github.com/s6007541/PSKD-ML" class="github-link">
-								<i class="fab fa-github"></i>
-							</a>
-							<p class="project-description">Progressive Self-Knowledge Distillation with Mutual Learning</p>
-							<div class="keywords">
-								<span class="keyword-btn">Knowledge Distillation</span>
-								<span class="keyword-btn">Model Compression</span>
-								<span class="keyword-btn">Deep Learning</span>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<!-- Project 4 -->
-				<div class="col-md-4 text-center col-padding">
-					<div class="work project-box" style="background-image: url(images/OECT.png);">
-						<div class="desc">
-							<h3>OECT</h3>
-							<a href="https://github.com/s6007541/OECT" class="github-link">
-								<i class="fab fa-github"></i>
-							</a>
-							<p class="project-description">Optimized-Embedded Cluster & Tune: Boost Cold Start Performance in Text Classification</p>
-							<div class="keywords">
-								<span class="keyword-btn">LLM</span>
-								<span class="keyword-btn">Text Classification</span>
-								<span class="keyword-btn">Cold Start</span>
-								<span class="keyword-btn">Unsupervised Learning</span>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- Project 5 -->
-				<div class="col-md-4 text-center col-padding">
-					<div class="work project-box" style="background-image: url(images/oceanspace.png);">
-						<div class="desc">
-							<h3>OceanSpace</h3>
-							<a href="https://github.com/s6007541/OceanSpace" class="github-link">
-								<i class="fab fa-github"></i>
-							</a>
-							<p class="project-description">LLM-based Personalized Digital Sanctuary for Stress Relief</p>
-							<div class="keywords">
-								<span class="keyword-btn">LLM</span>
-								<span class="keyword-btn">Chatbot</span>
-								<span class="keyword-btn">Personalization</span>
-								<span class="keyword-btn">Mental Health</span>
-								<span class="keyword-btn">AI Sanctuary</span>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- Project 6 -->
 				<div class="col-md-4 text-center col-padding">
 					<div class="work project-box" style="background-image: url(images/dumbs.png);">
 						<div class="desc">
@@ -445,6 +390,62 @@
 						</div>
 					</div>
 				</div>
+			</div>
+			<div class="row">
+				<!-- Project 4 -->
+				<div class="col-md-4 text-center col-padding">
+					<div class="work project-box" style="background-image: url(images/EvolveUniTest.png);">
+						<div class="desc">
+							<h3>EvolveUniTest</h3>
+							<a href="https://github.com/s6007541/EvolveUniTest" class="github-link">
+								<i class="fab fa-github"></i>
+							</a>
+							<p class="project-description">Evolving Prompt with Genetic Algorithm Yields Powerful Instruction for Unit Test Generation</p>
+							<div class="keywords">
+								<span class="keyword-btn">Unit Testing</span>
+								<span class="keyword-btn">Prompt Engineering</span>
+								<span class="keyword-btn">Evolutionary Algorithms</span>
+								<span class="keyword-btn">LLM</span>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- Project 5 -->
+				<div class="col-md-4 text-center col-padding">
+					<div class="work project-box" style="background-image: url(images/kd.jpg);">
+						<div class="desc">
+							<h3>PSKD-ML</h3>
+							<a href="https://github.com/s6007541/PSKD-ML" class="github-link">
+								<i class="fab fa-github"></i>
+							</a>
+							<p class="project-description">Progressive Self-Knowledge Distillation with Mutual Learning</p>
+							<div class="keywords">
+								<span class="keyword-btn">Knowledge Distillation</span>
+								<span class="keyword-btn">Model Compression</span>
+								<span class="keyword-btn">Deep Learning</span>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- Project 6-->
+				<div class="col-md-4 text-center col-padding">
+					<div class="work project-box" style="background-image: url(images/cold_llm.jpeg);">
+						<div class="desc">
+							<h3>OECT</h3>
+							<a href="https://github.com/s6007541/OECT" class="github-link">
+								<i class="fab fa-github"></i>
+							</a>
+							<p class="project-description">Optimized-Embedded Cluster & Tune: Boost Cold Start Performance in Text Classification</p>
+							<div class="keywords">
+								<span class="keyword-btn">LLM</span>
+								<span class="keyword-btn">Text Classification</span>
+								<span class="keyword-btn">Cold Start</span>
+								<span class="keyword-btn">Transfer Learning</span>
+							</div>
+						</div>
+					</div>
+				</div>
+				
 			</div>
 		</div>
 	</div>
