--- a/index.html
+++ b/index.html
@@ -199,11 +199,11 @@
 									</div>
 									<div class="timeline-body">
 										<p>
-											I have thoroughly enjoyed engaging in high-quality research across various fields of study, namely, <b>Machine Learning</b>, <b>Mobile Systems</b>, and <b>Human-Computer Interaction</b>.
+											I have thoroughly enjoyed doing high-quality research across various fields of study, namely, <b>Machine Learning</b>, <b>Mobile Systems</b>, and <b>Human-Computer Interaction</b>.
 											<br/>
 										<!-- </p>
 										<p> -->
-											Here are some of my research projects : <a href="https://nmsl.kaist.ac.kr/projects/aetta/">AETTA</a>, <a href="https://nmsl.kaist.ac.kr/projects/sotta/">SoTTA</a>, <a href="https://nmsl.kaist.ac.kr/projects/attention/">Attention</a>
+											Here are some of my 7 research projects : <a href="https://nmsl.kaist.ac.kr/projects/aetta/">AETTA</a>, <a href="https://nmsl.kaist.ac.kr/projects/sotta/">SoTTA</a>, <a href="https://nmsl.kaist.ac.kr/projects/attention/">Attention</a>
 										</p>
 									</div>
 								</div>
