update work info

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 									</div>
 									<div class="timeline-body">
 										<p>
-											I have thoroughly enjoyed doing high-quality research across various fields of study, namely, <b>Machine Learning</b>, <b>Mobile Systems</b>, and <b>Human-Computer Interaction</b>. I have led and significantly driven progress in <b>7 research projects</b>.
+											I have been deeply involved in end-to-end research across several fields, including <b>Machine Learning</b>, <b>Mobile Systems</b>, and <b>Human-Computer Interaction</b>. I have contributed to and played a significant role in advancing <b>7 research projects</b> from ideation to paper-writing, three of which have led to publications in top-tier conferences.
 											<br/>
 										<!-- </p>
 										<p> -->
