--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
 				</div>
 				<!-- Project 5 -->
 				<div class="col-md-4 text-center col-padding">
-					<div class="work project-box" style="background-image: url(images/pskd.png);">
+					<div class="work project-box" style="background-image: url(images/pskd-ml.png);">
 						<div class="desc">
 							<h3>PSKD-ML</h3>
 							<a href="https://github.com/s6007541/PSKD-ML" class="github-link">
