update unitest png

--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
 			<div class="row">
 				<!-- Project 4 -->
 				<div class="col-md-4 text-center col-padding">
-					<div class="work project-box" style="background-image: url(images/EvolveUniTest.png);">
+					<div class="work project-box" style="background-image: url(images/unitest.png);">
 						<div class="desc">
 							<h3>EvolveUniTest</h3>
 							<a href="https://github.com/s6007541/EvolveUniTest" class="github-link">
