update graduate kaist

--- a/index.html
+++ b/index.html
@@ -88,6 +88,22 @@
 	<div id="news" class="fh5co-bg-dark" style="color: white;">
 		<h2>Latest News</h2>
 		<div id="news-inner">
+			
+			<div class="news-item">
+				<p class="date">February 2025</p>
+				<p class="news-text">I graduated from KAIST with Summa Cum Laude (First-Class Honors)</p>
+			</div>
+
+			<div class="news-item">
+				<p class="date">February 2025</p>
+				<p class="news-text">I was selected for Outstanding Graduate (GPA) Award!</p>
+			</div>
+
+			<div class="news-item">
+				<p class="date">October 2024</p>
+				<p class="news-text">I was selected for the College of Engineering (CoE) Leadership Award!</p>
+			</div>
+
 			<div class="news-item">
 				<p class="date">October 2024</p>
 				<p class="news-text">I was selected for the College of Engineering (CoE) Leadership Award!</p>
@@ -254,10 +270,13 @@
 								</span>
 								</div>
 								<div class="timeline-body">
+									
 									<p>
-										Overall GPA: 4.13/4.30 (Percentile: 98.3%) 
-										&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+										Overall GPA: 4.13/4.30
 									</p> 
+									<p class="summa-cum-laude">Summa Cum Laude (First-Class Honors)
+										&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+									</p>
 								</div>
 							</div>
 							</div>
@@ -517,6 +536,19 @@
 		  </div>
 	  
 		  <div class="award-section">
+
+			<div class="award-item">
+			  <h3>Summa Cum Laude</h3>
+			  <span class="award-date">Fall, 2024</span>
+			  <p>Highest academic distinction for outstanding graduates, i.e., first-class honors.</p>
+			</div>
+
+			<div class="award-item">
+			  <h3>Outstanding Graduate (GPA) Award</h3>
+			  <span class="award-date">Fall, 2024</span>
+			  <p>Recognition of a graduate with one of the highest GPAs in the graduating class.</p>
+			</div>
+
 			<div class="award-item">
 			  <h3>Finalist from Typhoon Hackathon, Thai Language AI for Inclusivity</h3>
 			  <span class="award-date">Summer, 2024</span>
