--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t js-fullheight">
 						<div id="first-page-content" class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-							<div class="profile-thumb" style="background: url(images/Sorn.jpg);"></div>
+							<div class="profile-thumb" style="background: url(images/SornChottananurak.png);"></div>
 							<h1><span>Sorn Chottananurak</span></h1>
 							<h2><span>Machine Learning Researcher / Data Scientist</span></h2>
 							<p>
@@ -162,7 +162,7 @@
 			<!-- Left Section (Personal Info) -->
 			<div class="col-md-4">
 			  <!-- Insert your photo here -->
-			  <img src="images/Sorn_profile.jpg" alt="Sorn Chottananurak" class="profile-image">
+			  <img src="images/SornChottananurakAI.png" alt="Sorn Chottananurak" class="profile-image">
 			  <ul class="info">
 				<span class="firstname">Sorn</span><br/><span class="lastname">Chottananurak</span>
 			  </ul>
