--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 			<!-- Left Section (Personal Info) -->
 			<div class="col-md-4">
 			  <!-- Insert your photo here -->
-			  <img src="images/SornChottananurakAI.png" alt="Sorn Chottananurak" class="profile-image">
+			  <img src="images/Sorn_profile.jpg" alt="Sorn Chottananurak" class="profile-image">
 			  <ul class="info">
 				<span class="firstname">Sorn</span><br/><span class="lastname">Chottananurak</span>
 			  </ul>
