--- a/index.html
+++ b/index.html
@@ -88,7 +88,12 @@
 	<div id="news" class="fh5co-bg-dark" style="color: white;">
 		<h2>Latest News</h2>
 		<div id="news-inner">
-			
+
+			<div class="news-item">
+				<p class="date">March 2025</p>
+				<p class="news-text">I was accepted into the MSc program in Computer Science at <a href="https://ethz.ch/de.html">ETH Zurich</a>!</p>
+			</div>
+
 			<div class="news-item">
 				<p class="date">February 2025</p>
 				<p class="news-text">I graduated from KAIST with Summa Cum Laude (First-Class Honors)</p>
