update work exp

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 			</div>
 			<div class="news-item">
 				<p class="date">June 2022</p>
-				<p class="news-text">I joined <a href="https://nmsl.kaist.ac.kr/">NMSL</a> as an undergraduate researcher, working on HCI, Mobile Computing, and Machine Learning!</p>
+				<p class="news-text">I joined <a href="https://nmsl.kaist.ac.kr/">NMSL</a> as an AI/ML researcher, working on HCI, Mobile Computing, and Machine Learning!</p>
 			</div>
 			<div class="news-item">
 				<p class="date">March 2021</p>
@@ -207,7 +207,7 @@
 						<li class="timeline-unverted">
 							<div class="timeline-panel">
 								<div class="timeline-image">
-									<img src="images/nmsl.png" alt="Undergraduate Researcher" class="img-responsive">
+									<img src="images/nmsl.png" alt="AI/ML Researcher" class="img-responsive">
 								</div>
 								<div class="timeline-text">
 									<div class="timeline-heading">
