--- a/index.html
+++ b/index.html
@@ -207,11 +207,11 @@
 						<li class="timeline-unverted">
 							<div class="timeline-panel">
 								<div class="timeline-image">
-									<img src="images/nmsl.png" alt="AI/ML Researcher" class="img-responsive">
+									<img src="images/nmsl.png" alt="Undergraduate Researcher" class="img-responsive">
 								</div>
 								<div class="timeline-text">
 									<div class="timeline-heading">
-										<h3 class="timeline-title"><i class="icon-suitcase"> </i> Undergraduate Researcher</h3>
+										<h3 class="timeline-title"><i class="icon-suitcase"> </i>AI/ML Researcher</h3>
 										<span class="company">
 											<span style="white-space: pre-line">Networking & Mobile Systems Lab (<a href="https://nmsl.kaist.ac.kr/">NMSL</a>)
 												2022 - Current
