--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 			<div class="news-item">
 				<p class="date">March 2025</p>
-				<p class="news-text">I was accepted into the MSc program in Computer Science at <a href="https://ethz.ch/en.html">ETH Zurich</a>!</p>
+				<p class="news-text">I was accepted into the MSc program in Computer Science (AI) at <a href="https://ethz.ch/en.html">ETH Zurich</a>!</p>
 			</div>
 
 			<div class="news-item">
