update urp award

--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
 			<div class="award-item">
 			  <h3>Grand-Prix in Undergraduate Research Participation (URP) Program</h3>
 			  <span class="award-date">Winter-Spring, 2024</span>
-			  <p>The best project (1st-place) among all presented URP projects.</p>
+			  <p>Awarded 1st place among all URP projects, receiving 3000 USD.</p>
 			</div>
 	  
 			<div class="award-item">
