--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
 			<div class="award-item">
 			  <h3>Outstanding Graduate (GPA) Award</h3>
 			  <span class="award-date">Fall, 2024</span>
-			  <p>Recognition of a graduate with one of the highest GPAs in the graduating class.</p>
+			  <p>Recognized as a graduate with one of the highest GPAs in my class (3rd rank in the School of Computing, 9th rank in the University).</p>
 			</div>
 
 			<div class="award-item">
