--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
 		<div id="news-inner">
 
 			<div class="news-item">
+				<p class="date">May 2025</p>
+				<p class="news-text">Our paper, <a href="https://nmsl.kaist.ac.kr/projects/bitta/">Test-Time Adaptation with Binary Feedback</a>, was accepted to <strong>ICML 2025!</strong></p>
+			</div>
+			<div class="news-item">
 				<p class="date">March 2025</p>
 				<p class="news-text">I was accepted into the MSc program in Computer Science (AI) at <a href="https://ethz.ch/en.html">ETH Zurich</a>!</p>
 			</div>
@@ -501,9 +505,30 @@
 				  <div class="publication-content">
 					<div class="publication-text">
 					  <p style="white-space: pre-line">
+						<b>Test-Time Adaptation with Binary Feedback</b>
+						Taeckyung Lee, <u>Sorn Chottananurak</u>, Taesik Gong, Sung-Ju Lee.
+						<i>International Conference on Machine Learning (ICML),</i> 2025
+						Acceptance Rate: 26.9%.
+					  </p>
+					  <!-- <a href="https://arxiv.org/abs/2404.01351">[Paper]</a>
+					  <a href="https://nmsl.kaist.ac.kr/projects/aetta/">[Website]</a>
+					  <a href="https://github.com/taeckyung/AETTA">[Code]</a>
+					  <a href="https://www.youtube.com/watch?v=qZJ_0-rxMs0">[Video]</a> -->
+					</div>
+					<div class="publication-image">
+					  <img src="images/aetta.png" alt="Publication Image">
+					</div>
+				  </div>
+				</td>
+			  </tr>
+			  <tr>
+				<td class="cell_publication">
+				  <div class="publication-content">
+					<div class="publication-text">
+					  <p style="white-space: pre-line">
 						<b>AETTA: Label-Free Accuracy Estimation for Test-Time Adaptation</b>
 						Taeckyung Lee, <u>Sorn Chottananurak</u>, Taesik Gong, Sung-Ju Lee.
-						<i>In Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR),</i> 2024
+						<i>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR),</i> 2024
 						Acceptance Rate: 23.6%.
 					  </p>
 					  <a href="https://arxiv.org/abs/2404.01351">[Paper]</a>
@@ -524,7 +549,7 @@
 					  <p style="white-space: pre-line">
 						<b>SoTTA: Robust Test-Time Adaptation on Noisy Data Streams</b>
 						Taesik Gong*, Yewon Kim*, Taeckyung Lee*, <u>Sorn Chottananurak</u>, Sung-Ju Lee.
-						<i>In Advances in Neural Information Processing Systems (NeurIPS),</i> 2023
+						<i>Conference on Neural Information Processing Systems (NeurIPS),</i> 2023
 						* Equal Contribution. Acceptance Rate: 26.1%.
 					  </p>
 					  <a href="https://arxiv.org/abs/2310.10074">[Paper]</a>
