--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
 					  <a href="https://www.youtube.com/watch?v=qZJ_0-rxMs0">[Video]</a> -->
 					</div>
 					<div class="publication-image">
-					  <img src="images/aetta.png" alt="Publication Image">
+					  <img src="images/bitta.png" alt="Publication Image">
 					</div>
 				  </div>
 				</td>
