--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
 
 			<div class="news-item">
 				<p class="date">May 2025</p>
-				<p class="news-text">Our paper, <a href="https://nmsl.kaist.ac.kr/projects/bitta/">Test-Time Adaptation with Binary Feedback</a>, was accepted to <strong>ICML 2025!</strong></p>
+				<!-- <p class="news-text">Our paper, <a href="https://nmsl.kaist.ac.kr/projects/bitta/">Test-Time Adaptation with Binary Feedback</a>, was accepted to <strong>ICML 2025!</strong></p> -->
+				<p class="news-text">Our paper, <a href="#bitta_paper">Test-Time Adaptation with Binary Feedback</a>, was accepted to <strong>ICML 2025!</strong></p>
 			</div>
 			<div class="news-item">
 				<p class="date">March 2025</p>
@@ -501,7 +502,7 @@
 		  <table class="table_publication">
 			<tbody>
 			  <tr>
-				<td class="cell_publication">
+				<td class="cell_publication" id="bitta_paper">
 				  <div class="publication-content">
 					<div class="publication-text">
 					  <p style="white-space: pre-line">
