update paper details

--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
 					<div class="publication-text">
 					  <p style="white-space: pre-line">
 						<b>Test-Time Adaptation with Binary Feedback</b>
-						Taeckyung Lee, <u>Sorn Chottananurak</u>, Taesik Gong, Sung-Ju Lee.
+						Taeckyung Lee, <u>Sorn Chottananurak</u>, Junsu Kim, Jinwoo Shin, Taesik Gong, Sung-Ju Lee.
 						<i>International Conference on Machine Learning (ICML),</i> 2025
 						Acceptance Rate: 26.9%.
 					  </p>
