--- a/index.html
+++ b/index.html
@@ -559,11 +559,27 @@
 					  <a href="https://neurips.cc/virtual/2023/poster/72892">[Video/Poster]</a>
 					</div>
 					<div class="publication-image">
-					  <img src="images/SoTTA.png" alt="Publication Image">
+					  <img src="images/sotta.png" alt="Publication Image">
 					</div>
 				  </div>
 				</td>
 			  </tr>
+			  <tr>
+				<td class="cell_publication">
+				  <div class="publication-content">
+					<div class="publication-text">
+					  <p style="white-space: pre-line">
+						<b>UWB Knows Who Spoke: Speaker Diarization with Speech Gesture Sensing and Audio</b>
+						Wan Ju Kang, Ryuhaerang Choi, <u>Sorn Chottananurak</u>, Sangwook Bak, Sung-Ju Lee.
+					  </p>
+					</div>
+					<div class="publication-image">
+					  <img src="images/uwb.png" alt="Publication Image">
+					</div>
+				  </div>
+				</td>
+			  </tr>
+			  
 			</tbody>
 		  </table>
 		</div>
