--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
 						* Equal Contribution. Acceptance Rate: 26.1%.
 					  </p>
 					  <a href="https://arxiv.org/abs/2310.10074">[Paper]</a>
-					  <a href="https://nmsl.kaist.ac.kr/projects/sotta/">[Website]</a>
+					  <a href="https://nmsl.kaist.ac.kr/projects/sotta_/">[Website]</a>
 					  <a href="https://github.com/taeckyung/SoTTA">[Code]</a>
 					  <a href="https://neurips.cc/virtual/2023/poster/72892">[Video/Poster]</a>
 					</div>
