--- a/index.html
+++ b/index.html
@@ -265,10 +265,11 @@
 							</div>
 							<div class="timeline-text">
 								<div class="timeline-heading">
-								<h3 class="timeline-title"><i class="icon-graduation-cap"> </i> B.S. School of Computing</h3>
+								<h3 class="timeline-title"><i class="icon-graduation-cap"> </i> B.S. College of Engineering</h3>
 								<div class="major">
 									<span>Double Major: Computer Science & Electrical Engineering</span>
 								</div>
+								
 								<span class="company">
 									<span style="white-space: pre-line">Korea Advanced Institute of Science & Technology (<a href="https://engineering.kaist.ac.kr/">KAIST</a>)
 									2020 - 2024
