--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 			<!-- Right Section (About Me Description) -->
 			<div class="col-md-8">
 			  <h3><br/>Hello There!</h3>
-			  <p>I am a fresh graduate from the Korea Advanced Institute of Science & Technology (KAIST) with double majors in Computer Science and Electrical Engineering. My research and professional interests span across <strong>machine learning</strong>,  <strong>data science</strong>, <strong>domain adaptation</strong>, <strong>personalized AI</strong>, and <strong>topics beyond supervised learning (semi-supervised learning, self-supervised learning, and unsupervised learning)</strong>.</p>
+			  <p>I am a fresh graduate from the Korea Advanced Institute of Science & Technology (KAIST) with double majors in Computer Science and Electrical Engineering. My research and professional interests span across <strong>machine learning</strong>,  <strong>data science</strong>, <strong>domain adaptation</strong>, <strong>personalized AI</strong>, <strong>generative AI</strong>, and <strong>topics beyond supervised learning (semi-supervised learning, self-supervised learning, and unsupervised learning)</strong>.</p>
 			  <p>As an active researcher, I am working on innovative projects related to state-of-the-art technology in machine learning and data science. Currently, I am exploring new opportunities that align with my passion and expertise.</p>
 			  <p>Feel free to check out my <a href="https://drive.google.com/drive/folders/1--S2nAlBMMyHbJJEUqM1ZFWXHHLh9ZXS?usp=sharing">Resume!</a></p>
 	  
