update date of awards

--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
 		  </div>
 	  
 		  <div class="award-section">
-
+			
 			<div class="award-item">
 			  <h3>Summa Cum Laude</h3>
 			  <span class="award-date">Fall, 2024</span>
@@ -616,7 +616,7 @@
 	  
 			<div class="award-item">
 			  <h3>Grand-Prix in Undergraduate Research Participation (URP) Program</h3>
-			  <span class="award-date">Winter-Spring, 2024</span>
+			  <span class="award-date">Winter 2023 - Spring, 2024</span>
 			  <p>Awarded 1st place among all URP projects, receiving 3000 USD.</p>
 			</div>
 	  
@@ -634,7 +634,7 @@
 	  
 			<div class="award-item">
 			  <h3>Oral Presentation in Undergraduate Research Participation (URP) Program</h3>
-			  <span class="award-date">Winter-Spring, 2024</span>
+			  <span class="award-date">Winter, 2023 - Spring, 2024</span>
 			  <p>Top-selected undergraduate students at KAIST to engage in active research activities.</p>
 			</div>
 	  
@@ -649,6 +649,7 @@
 			  <span class="award-date">Fall, 2020 - Spring, 2025</span>
 			  <p>Tuition fee and full amount of school support fees supported by Korea Government.</p>
 			</div>
+
 		  </div>
 		</div>
 	  </div>
