add exp section

--- a/index.html
+++ b/index.html
@@ -254,6 +254,29 @@
 								</div>
 							</div>
 						</li>
+						<!-- Timeline Item 3 -->
+						<li class="timeline-inverted">
+							<div class="timeline-panel">
+								<div class="timeline-image">
+									<img src="images/kaist.png" alt="KAIST Official Tutor in Computer Science" class="img-responsive">
+								</div>
+								<div class="timeline-text">
+									<div class="timeline-heading">
+										<h3 class="timeline-title"><i class="icon-suitcase"> </i> Data Scientist Intern</h3>
+										<span class="company">
+											<span style="white-space: pre-line">Korea Advanced Institute of Science & Technology (<a href="https://engineering.kaist.ac.kr/">KAIST</a>)
+												2022
+											</span>
+										</span>
+									</div>
+									<div class="timeline-body">
+										<p>
+											Recognized for outstanding academic performance in Computer Science, I was selected by the University as a KAIST Official Computer Science Tutor, where I tutored freshmen and sophomores in CS101 (Introduction to Programming) and CS206 (Data Structures).
+										</p>
+									</div>
+								</div>
+							</div>
+						</li>
 						<!-- Education Section -->
 						<li class="timeline-heading text-center">
 							<div><h3 class="education">Education</h3></div>
