--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 								</div>
 								<div class="timeline-text">
 									<div class="timeline-heading">
-										<h3 class="timeline-title"><i class="icon-suitcase"> </i> Data Scientist Intern</h3>
+										<h3 class="timeline-title"><i class="icon-suitcase"> </i>Data Scientist Intern</h3>
 										<span class="company">
 											<span style="white-space: pre-line">Siam Commercial Bank (<a href="https://www.scb.co.th/en/personal-banking.html">SCB</a>)
 												2023
@@ -262,7 +262,7 @@
 								</div>
 								<div class="timeline-text">
 									<div class="timeline-heading">
-										<h3 class="timeline-title"><i class="icon-suitcase"> </i> Data Scientist Intern</h3>
+										<h3 class="timeline-title"><i class="icon-suitcase"> </i>KAIST Official Tutor in Computer Science</h3>
 										<span class="company">
 											<span style="white-space: pre-line">Korea Advanced Institute of Science & Technology (<a href="https://engineering.kaist.ac.kr/">KAIST</a>)
 												2022
