update latest paper

--- a/index.html
+++ b/index.html
@@ -535,10 +535,10 @@
 						<i>International Conference on Machine Learning (ICML),</i> 2025
 						Acceptance Rate: 26.9%.
 					  </p>
-					  <!-- <a href="https://arxiv.org/abs/2404.01351">[Paper]</a>
-					  <a href="https://nmsl.kaist.ac.kr/projects/aetta/">[Website]</a>
-					  <a href="https://github.com/taeckyung/AETTA">[Code]</a>
-					  <a href="https://www.youtube.com/watch?v=qZJ_0-rxMs0">[Video]</a> -->
+					  <a href="https://nmsl.kaist.ac.kr/pdf/ICML25_BiTTA.pdf">[Paper]</a>
+					  <a href="https://nmsl.kaist.ac.kr/projects/bitta/">[Website]</a>
+					  <a href="https://github.com/taeckyung/BiTTA">[Code]</a>
+					  <a href="https://icml.cc/virtual/2025/poster/46190">[Audio/Poster]</a>
 					</div>
 					<div class="publication-image">
 					  <img src="images/bitta.png" alt="Publication Image">
