--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t js-fullheight">
 						<div id="first-page-content" class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-							<div class="profile-thumb" style="background: url(images/Sorn_profile.jpg);"></div>
+							<div class="profile-thumb"></div>
 							<h1><span>Sorn Chottananurak</span></h1>
 							<h2><span>Machine Learning Researcher / Data Scientist</span></h2>
 							<p>
@@ -91,8 +91,7 @@
 
 			<div class="news-item">
 				<p class="date">May 2025</p>
-				<!-- <p class="news-text">Our paper, <a href="https://nmsl.kaist.ac.kr/projects/bitta/">Test-Time Adaptation with Binary Feedback</a>, was accepted to <strong>ICML 2025!</strong></p> -->
-				<p class="news-text">Our paper, <a href="#bitta_paper">Test-Time Adaptation with Binary Feedback</a>, was accepted to <strong>ICML 2025!</strong></p>
+				<p class="news-text">Our paper, <a href="https://nmsl.kaist.ac.kr/projects/bitta/">Test-Time Adaptation with Binary Feedback</a>, was accepted to <strong>ICML 2025!</strong></p>
 			</div>
 			<div class="news-item">
 				<p class="date">March 2025</p>
